# tmgit-py

./: .gitignore  CONTEXT.md  README.md  SESSION.md  climb.py  exceptions.py  fly.py  land.py  main.py  preflight.py  pyproject.toml
.github/: copilot-instructions.md
tests/: __init__.py  test_climb.py  test_fly.py  test_land.py  test_main.py  test_preflight.py
