[project]
name = "tmgit-py"
version = "0.1.0"
description = "Máquina do tempo usando git — reescrita em Python do projeto tmgit"
authors = [
    { name = "Eduardo Lisboa", email = "eduardo.lisboa@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gitpython>=3.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]
